# target-workday-sftp

./: .gitignore  LICENSE  README.md  sample_config.json  sample_input_file.csv  setup.cfg  setup.py
.github/: dependabot.yml
.github/workflows/: test.yml
src/target_workday_sftp/: __init__.py  __main__.py  sftp_upload.py
target_workday_sftp/: __init__.py  __main__.py  const.py  diagnostic.py  exceptions.py  sftp_upload.py  stdio_util.py  transform.py
tests/: test_core.py
