[metadata]
name = target-workday-sftp
version = 0.0.1
description = Batch target: RevRec journal summary CSV → transform → SFTP upload (Intacct-style).
long_description = file: README.md
long_description_content_type = text/markdown
author = hotglue
url = https://github.com/hotgluexyz/target-workday-sftp
license = Apache License 2.0
keywords = workday, sftp, singer, ETL, revrec, journal
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Natural Language :: English
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
license_files = LICENSE

[options]
package_dir =
    =.
packages = find:
include_package_data = true
zip_safe = False

python_requires = >=3.7.1,<3.11
install_requires =
    paramiko>=2.12.0
    singer-python>=5.0.12

[options.packages.find]
where = .

[options.entry_points]
console_scripts =
    target-workday-sftp = target_workday_sftp:main

[options.extras_require]
dev =
    pytest>=7.0.0

[flake8]
max-line-length = 120
select = C,E,F,W,B,B950
ignore = E203,E501,W503

[isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
line_length = 88
known_first_party = target_workday_sftp
default_section = THIRDPARTY
sections = FUTURE,STDLIB,THIRDPARTY,FIRSTPARTY,LOCALFOLDER
